plugins {
    id 'org.springframework.boot' version '3.4.5' apply false
    id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
    apply plugin: 'io.spring.dependency-management'
    group 'com.onevour.core'

    dependencyManagement {
        dependencies {
            // dependency 'org.projectlombok:lombok:1.18.2'
        }
    }
}

subprojects {
    apply plugin: 'java'
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
        withSourcesJar()
    }

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://repo.spring.io/snapshot" }
        maven { url "https://repo.spring.io/milestone" }
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/onevour/spring-commons")
            credentials {
                username = project.findProperty("user") ?: System.getenv("USERNAME")
                password = project.findProperty("token") ?: System.getenv("TOKEN")
            }
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok:1.18.38'
        annotationProcessor 'org.projectlombok:lombok:1.18.38'
    }

    test {
        useJUnitPlatform()
    }

}